[package]
name = "battlesnake-doctor-strangle"
version = "0.1.0"
edition = "2021"
default-run = "snake"

[dependencies]
log = "0"
pretty_env_logger = "0"
tokio = { version = "1", features = ["full"] }
warp = "0"
serde = { version = "1", features = ["derive"] }
itertools = "0"
rand = "0"
reqwest = {version = "0", features = ["blocking"] }
convert_case = "0"
scraper = "0"
color-eyre = "0"
